--- a/Bleakville/Bleakville.vcxproj
+++ b/Bleakville/Bleakville.vcxproj
@@ -133,14 +133,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cube.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logging.h" />
     <ClInclude Include="Position.h" />
-    <ClInclude Include="TriangleObject.h" />
+    <ClInclude Include="Cube.h" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
