--- a/Bleakville/Bleakville.vcxproj
+++ b/Bleakville/Bleakville.vcxproj
@@ -137,14 +137,18 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Utils.cpp" />
+    <ClCompile Include="Vec2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Logging.h" />
-    <ClInclude Include="Position.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="Vec2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
